tests/negative/null_byte_string.far
fun main() {
  s = "a\0b"
  return 0
}
